# lets-go-rss

./: .gitignore  README.md  SKILL.md  design_feed.xml  entertainment_feed.xml  feed.xml  humanities_feed.xml  latest_update.md  main.py  others_feed.xml  pyproject.toml  requirements.txt  subscriptions.opml  summary.md  tech_feed.xml
assets/: subscriptions.opml
scripts/: database.py  lets_go_rss.py  mp_tool.py  report_generator.py  rss_engine.py  run_status_push.sh  run_update_cron.sh  scrapers.py
